Reorganizes sass files, fixes grid layout bug

--- a/photoadmin/assets/constants.sass
+++ b/photoadmin/assets/constants.sass
@@ -18,3 +18,14 @@ $color5: #D55EFF
   -o-transition: $t
   -moz-transition: $t
   -webkit-transition: $t
+
+h1
+  font-size: 150%
+  text-align: center
+
+h2
+  font-size: 125%
+  text-align: center
+
+h3
+  text-align: center
