--- a/photoadmin/assets/resets.sass
+++ b/photoadmin/assets/resets.sass
@@ -1,4 +1,4 @@
-h1, h2, h3, div, p, ul, ol, li, dl, dt, dd, iframe
+h1, h2, h3, div, p, ul, ol, li, dl, dt, dd, iframe, figure
   font-family: sans-serif
   border: 0
   margin: 0
@@ -6,3 +6,6 @@ h1, h2, h3, div, p, ul, ol, li, dl, dt, dd, iframe
   list-style: none
   font-size: inherit
   font-weight: inherit
+
+a
+  text-decoration: none
