--- a/photoadmin/assets/uploader.sass
+++ b/photoadmin/assets/uploader.sass
@@ -18,20 +18,12 @@ $control-padding: 50px
 img
   display: block
 
-h1
-  font-size: 150%
-  text-align: center
-
-h2
+h2 select
   font-size: 125%
-  text-align: center
-  select
-    font-size: 125%
-    vertical-align: middle
+  vertical-align: middle
 
 h3
   margin: 10px auto
-  text-align: center
 
 #instructions
   width: $drop-size
